--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "vite",
     "prepack": "vite build --sourcemap",
     "prepare": "node ./scripts/build.js",
-    "test": "stricter-standard *.js examples/*.js scripts/*.js src/*.js"
+    "test": "stricter-standard *.js examples/*.js src/*.js"
   },
   "repository": {
     "type": "git",
@@ -28,28 +28,28 @@
   },
   "homepage": "https://github.com/rdf-ext/rdf-elements",
   "dependencies": {
-    "@codemirror/language": "^6.9.3",
-    "@codemirror/state": "^6.3.2",
-    "@codemirror/view": "^6.22.1",
-    "@lezer/highlight": "^1.2.0",
-    "@lezer/lr": "^1.3.14",
-    "@rdfjs/formats": "^4.0.0",
-    "@rdfjs/score": "^0.1.1",
-    "@rdfjs/tree": "^0.2.0",
+    "@codemirror/language": "^6.10.8",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.36.3",
+    "@lezer/highlight": "^1.2.1",
+    "@lezer/lr": "^1.4.2",
+    "@rdfjs/formats": "^4.0.1",
+    "@rdfjs/score": "^0.1.2",
+    "@rdfjs/tree": "^0.2.1",
+    "bs-elements": "^0.1.1",
     "codemirror": "^6.0.1",
-    "cytoscape": "^3.27.0",
+    "cytoscape": "^3.31.0",
     "cytoscape-cola": "^2.5.1",
-    "lit": "^3.1.0",
-    "rdf-ext": "^2.5.0",
-    "readable-stream": "^4.4.2",
-    "sparqljs": "^3.7.1",
+    "lit": "^3.2.1",
+    "rdf-ext": "^2.5.2",
+    "readable-stream": "^4.7.0",
+    "sparqljs": "^3.7.3",
     "stream-chunks": "^1.0.0",
     "webcola": "^3.4.0"
   },
   "devDependencies": {
-    "bootstrap": "^5.3.2",
-    "housemd": "^0.1.2",
-    "stricter-standard": "^0.3.0",
-    "vite": "^5.0.2"
+    "housemd": "^0.1.3",
+    "stricter-standard": "^0.3.1",
+    "vite": "^6.1.1"
   }
 }
